# lab_3

./: CMakeLists.txt  README.md  server_main.cpp
core/: CMakeLists.txt
core/p1_first_test/: CMakeLists.txt  main.cpp  math_utils.h  solver.h
core/p2_first_main/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
core/p3_mixed_test_cls/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
core/p4_mixed_main_imp/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
core/p5_mixed_test_imp/: CMakeLists.txt  main.cpp  solver.cpp  solver.h
frontend/: index.html
shared/: CMakeLists.txt  grid.h  tridiag.h
